updated word list

--- a/sentiment.ipynb
+++ b/sentiment.ipynb
@@ -279,12 +279,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 74,
    "metadata": {},
    "outputs": [],
    "source": [
     "bad_words = [\n",
     "    \"stinky\",\n",
+    "    \"stank\"\n",
     "    \"moldy\",\n",
     "    \"mouldy\",\n",
     "    \"rotted\",\n",
@@ -295,8 +296,8 @@
     "    \"curdled\",\n",
     "    \"danger\",\n",
     "    \"dangerous\",\n",
-    "    \"avoid\",\n",
     "    \"ammonia\",\n",
+    "    \"unsafe\"\n",
     "    \"sick\"\n",
     "]\n",
     "\n",
@@ -309,7 +310,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 75,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -333,7 +334,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 71,
    "metadata": {},
    "outputs": [
     {
@@ -358,14 +359,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 72,
    "metadata": {},
    "outputs": [
     {
      "output_type": "stream",
      "name": "stdout",
      "text": [
-      "I got this by mistake, somehow.  there seems to be a regular yellow candy style AND then there is this red stripe variety.  I had ordered the yellow plain kind but they shipped this, instead.  I tried two pieces.  could not even finish either one.  tasted like wax or something very flavorless!  I would not buy this.  in fact, I did not, but for some reason, amazon shipped this to me.\n0.7263\n\nProbably would have been good, but my nuts were rancid.\n-0.775\n\nI am Turkish and I've never had any problems with Marmarabirlik olives in my whole life.  HOWEVER, this is the first time I've ordered them online and I have to say there were the worst olives I've ever tasted.  They were rotten!  My Mom even commented that these olives are bad.  Maybe I got a bad batch because this company makes one of the very best Turkish olives on the market.  I'm extremely disappointed with this online order.\n-0.9069\n\nThe taste is okay....Nothing spectacular....It tastes like it was made with rotted anchovies....<br />The main problem: I braised something using this sauce and my apartment stunk like rotted fish for days....<br />The cheap plastic bottle does not make this product more enticing.....\n-0.0772\n\n"
+      "Probably would have been good, but my nuts were rancid.\n-0.775\n\nI am Turkish and I've never had any problems with Marmarabirlik olives in my whole life.  HOWEVER, this is the first time I've ordered them online and I have to say there were the worst olives I've ever tasted.  They were rotten!  My Mom even commented that these olives are bad.  Maybe I got a bad batch because this company makes one of the very best Turkish olives on the market.  I'm extremely disappointed with this online order.\n-0.9069\n\nThe taste is okay....Nothing spectacular....It tastes like it was made with rotted anchovies....<br />The main problem: I braised something using this sauce and my apartment stunk like rotted fish for days....<br />The cheap plastic bottle does not make this product more enticing.....\n-0.0772\n\nGood taste, but absolutely no flavor, both dry and brewed. Contacted Numi Customer Service. Got careless response, They sent me a couple of tea bags which were much worse than the loose Emperor's Puerh tea. After a month or so it smells rotten. Still taste is OK\n-0.9272\n\n"
      ]
     }
    ],
@@ -380,7 +381,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 73,
    "metadata": {},
    "outputs": [],
    "source": [
