started on hpc script

--- a/Topic_Modelling.ipynb
+++ b/Topic_Modelling.ipynb
@@ -2,20 +2,9 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\geoio\\Anaconda3\\lib\\site-packages\\numpy\\_distributor_init.py:32: UserWarning: loaded more than 1 DLL from .libs:\n",
-      "C:\\Users\\geoio\\Anaconda3\\lib\\site-packages\\numpy\\.libs\\libopenblas.IPBC74C7KURV7CB2PKT5Z5FNR3SIBV4J.gfortran-win_amd64.dll\n",
-      "C:\\Users\\geoio\\Anaconda3\\lib\\site-packages\\numpy\\.libs\\libopenblas.JPIJNSWNNAN3CE6LLI5FWSPHUT2VXMTH.gfortran-win_amd64.dll\n",
-      "  stacklevel=1)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import pandas as pd \n",
     "DATASET = \"amazon_reviews_us_Grocery_v1_00.tsv\"\n",
@@ -23,7 +12,7 @@
     "import warnings\n",
     "import sys\n",
     "import matplotlib.pyplot as plt\n",
-    "from wordcloud import WordCloud, STOPWORDS\n",
+    "#from wordcloud import WordCloud, STOPWORDS\n",
     "warnings.filterwarnings('ignore')\n",
     "warnings.simplefilter('ignore')\n",
     "logging.disable(sys.maxsize)\n",
@@ -32,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1378,9 +1367,8 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
-   "language": "python",
-   "name": "python3"
+   "name": "python394jvsc74a57bd052774b798c40528f530de7657fd1851e18ea3fd46ccdf10ced65da4d8da447ac",
+   "display_name": "Python 3.9.4 64-bit"
   },
   "language_info": {
    "codemirror_mode": {
@@ -1392,7 +1380,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.9"
+   "version": "3.9.4"
+  },
+  "metadata": {
+   "interpreter": {
+    "hash": "52774b798c40528f530de7657fd1851e18ea3fd46ccdf10ced65da4d8da447ac"
+   }
   }
  },
  "nbformat": 4,
