--- a/sentiment.ipynb
+++ b/sentiment.ipynb
@@ -2,17 +2,17 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
-    "DATASET = \"amazon_reviews_us_Grocery_v1_00.tsv\"\n",
+    "DATASET = \"sentiment_ds.csv\"\n",
     "import logging\n",
     "import warnings\n",
     "import sys\n",
     "import matplotlib.pyplot as plt\n",
-    "from wordcloud import WordCloud, STOPWORDS\n",
+    "\n",
     "from nltk.corpus import wordnet\n",
     "import nltk\n",
     "from nltk.sentiment import SentimentIntensityAnalyzer\n",
@@ -23,18 +23,16 @@
     "warnings.filterwarnings('ignore')\n",
     "warnings.simplefilter('ignore')\n",
     "logging.disable(sys.maxsize)\n",
-    "\n",
-    "sia = SentimentIntensityAnalyzer()\n",
     "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
-    "dataset = pd.read_table(DATASET, error_bad_lines=False, header=0, warn_bad_lines=False) \n",
+    "ds = pd.read_csv(DATASET, error_bad_lines=False, header=0, warn_bad_lines=False) \n",
     "# there are some malformed entries the dataset... let's ignore those for now\n"
    ]
   },
@@ -47,7 +45,7 @@
      "output_type": "execute_result",
      "data": {
       "text/plain": [
-       "2393379"
+       "2393238"
       ]
      },
      "metadata": {},
@@ -55,7 +53,7 @@
     }
    ],
    "source": [
-    "len(dataset.index)"
+    "len(ds.index)"
    ]
   },
   {
@@ -64,35 +62,60 @@
    "metadata": {},
    "outputs": [
     {
-     "output_type": "error",
-     "ename": "NameError",
-     "evalue": "name 'subjects' is not defined",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-10-3a6f14b0a712>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[0msynonyms\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;33m[\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 2\u001b[1;33m \u001b[1;32mfor\u001b[0m \u001b[0msubject\u001b[0m \u001b[1;32min\u001b[0m \u001b[0msubjects\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      3\u001b[0m     \u001b[1;32mfor\u001b[0m \u001b[0msyn\u001b[0m \u001b[1;32min\u001b[0m \u001b[0mwordnet\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0msynsets\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0msubject\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      4\u001b[0m         \u001b[1;32mfor\u001b[0m \u001b[0ml\u001b[0m \u001b[1;32min\u001b[0m \u001b[0msyn\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mlemmas\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      5\u001b[0m             \u001b[0msynonyms\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mappend\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0ml\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mname\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;31mNameError\u001b[0m: name 'subjects' is not defined"
-     ]
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "   Unnamed: 0 marketplace  customer_id       review_id  product_id  \\\n",
+       "0           0          US     42521656  R26MV8D0KG6QI6  B000SAQCWC   \n",
+       "1           1          US     12049833  R1OF8GP57AQ1A0  B00509LVIQ   \n",
+       "2           2          US       107642  R3VDC1QB6MC4ZZ  B00KHXESLC   \n",
+       "3           3          US      6042304  R12FA3DCF8F9ER  B000F8JIIC   \n",
+       "4           4          US     18123821   RTWHVNV6X4CNJ  B004ZWR9RQ   \n",
+       "\n",
+       "   product_parent                                      product_title  \\\n",
+       "0       159713740  The Cravings Place Chocolate Chunk Cookie Mix,...   \n",
+       "1       138680402            Mauna Loa Macadamias, 11 Ounce Packages   \n",
+       "2       252021703  Organic Matcha Green Tea Powder - 100% Pure Ma...   \n",
+       "3       752728342  15oz Raspberry Lyons Designer Dessert Syrup Sauce   \n",
+       "4       552138758  Stride Spark Kinetic Fruit Sugar Free Gum, 14-...   \n",
+       "\n",
+       "  product_category  star_rating  helpful_votes  total_votes vine  \\\n",
+       "0          Grocery          5.0            0.0          0.0    N   \n",
+       "1          Grocery          5.0            0.0          0.0    N   \n",
+       "2          Grocery          5.0            0.0          0.0    N   \n",
+       "3          Grocery          5.0            0.0          0.0    N   \n",
+       "4          Grocery          5.0            0.0          0.0    N   \n",
+       "\n",
+       "  verified_purchase                     review_headline  \\\n",
+       "0                 Y  Using these for years - love them.   \n",
+       "1                 Y                           Wonderful   \n",
+       "2                 N                          Five Stars   \n",
+       "3                 Y                          Five Stars   \n",
+       "4                 Y                          Five Stars   \n",
+       "\n",
+       "                                         review_body review_date  \\\n",
+       "0  As a family allergic to wheat, dairy, eggs, nu...  2015-08-31   \n",
+       "1  My favorite nut.  Creamy, crunchy, salty, and ...  2015-08-31   \n",
+       "2  This green tea tastes so good! My girlfriend l...  2015-08-31   \n",
+       "3  I love Melissa's brand but this is a great sec...  2015-08-31   \n",
+       "4                                               good  2015-08-31   \n",
+       "\n",
+       "   sentiment_score  \n",
+       "0           0.8096  \n",
+       "1           0.6915  \n",
+       "2           0.8286  \n",
+       "3           0.8500  \n",
+       "4           0.4404  "
+      ],
+      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>Unnamed: 0</th>\n      <th>marketplace</th>\n      <th>customer_id</th>\n      <th>review_id</th>\n      <th>product_id</th>\n      <th>product_parent</th>\n      <th>product_title</th>\n      <th>product_category</th>\n      <th>star_rating</th>\n      <th>helpful_votes</th>\n      <th>total_votes</th>\n      <th>vine</th>\n      <th>verified_purchase</th>\n      <th>review_headline</th>\n      <th>review_body</th>\n      <th>review_date</th>\n      <th>sentiment_score</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>0</td>\n      <td>US</td>\n      <td>42521656</td>\n      <td>R26MV8D0KG6QI6</td>\n      <td>B000SAQCWC</td>\n      <td>159713740</td>\n      <td>The Cravings Place Chocolate Chunk Cookie Mix,...</td>\n      <td>Grocery</td>\n      <td>5.0</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>N</td>\n      <td>Y</td>\n      <td>Using these for years - love them.</td>\n      <td>As a family allergic to wheat, dairy, eggs, nu...</td>\n      <td>2015-08-31</td>\n      <td>0.8096</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>1</td>\n      <td>US</td>\n      <td>12049833</td>\n      <td>R1OF8GP57AQ1A0</td>\n      <td>B00509LVIQ</td>\n      <td>138680402</td>\n      <td>Mauna Loa Macadamias, 11 Ounce Packages</td>\n      <td>Grocery</td>\n      <td>5.0</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>N</td>\n      <td>Y</td>\n      <td>Wonderful</td>\n      <td>My favorite nut.  Creamy, crunchy, salty, and ...</td>\n      <td>2015-08-31</td>\n      <td>0.6915</td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td>2</td>\n      <td>US</td>\n      <td>107642</td>\n      <td>R3VDC1QB6MC4ZZ</td>\n      <td>B00KHXESLC</td>\n      <td>252021703</td>\n      <td>Organic Matcha Green Tea Powder - 100% Pure Ma...</td>\n      <td>Grocery</td>\n      <td>5.0</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>N</td>\n      <td>N</td>\n      <td>Five Stars</td>\n      <td>This green tea tastes so good! My girlfriend l...</td>\n      <td>2015-08-31</td>\n      <td>0.8286</td>\n    </tr>\n    <tr>\n      <th>3</th>\n      <td>3</td>\n      <td>US</td>\n      <td>6042304</td>\n      <td>R12FA3DCF8F9ER</td>\n      <td>B000F8JIIC</td>\n      <td>752728342</td>\n      <td>15oz Raspberry Lyons Designer Dessert Syrup Sauce</td>\n      <td>Grocery</td>\n      <td>5.0</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>N</td>\n      <td>Y</td>\n      <td>Five Stars</td>\n      <td>I love Melissa's brand but this is a great sec...</td>\n      <td>2015-08-31</td>\n      <td>0.8500</td>\n    </tr>\n    <tr>\n      <th>4</th>\n      <td>4</td>\n      <td>US</td>\n      <td>18123821</td>\n      <td>RTWHVNV6X4CNJ</td>\n      <td>B004ZWR9RQ</td>\n      <td>552138758</td>\n      <td>Stride Spark Kinetic Fruit Sugar Free Gum, 14-...</td>\n      <td>Grocery</td>\n      <td>5.0</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>N</td>\n      <td>Y</td>\n      <td>Five Stars</td>\n      <td>good</td>\n      <td>2015-08-31</td>\n      <td>0.4404</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
+     },
+     "metadata": {},
+     "execution_count": 10
     }
    ],
    "source": [
-    "synonyms = []\n",
-    "for subject in subjects:\n",
-    "    for syn in wordnet.synsets(subject):\n",
-    "        for l in syn.lemmas():\n",
-    "            synonyms.append(l.name())\n",
-    "\n",
-    "print(set(synonyms))\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "### Let's see what the dataset looks like... \n",
-    "dataset.head()\n"
+    "ds.head()\n"
    ]
   },
   {
@@ -102,7 +125,7 @@
    "outputs": [],
    "source": [
     "#lots of nan values... :( \n",
-    "dataset.isnull().sum()"
+    "ds.isnull().sum()"
    ]
   },
   {
@@ -112,7 +135,7 @@
    "outputs": [],
    "source": [
     "# Counts of reviews for same product\n",
-    "dataset['product_id'].value_counts()"
+    "ds['product_id'].value_counts()"
    ]
   },
   {
@@ -144,7 +167,7 @@
    ],
    "source": [
     "# Counts of reviews with same body\n",
-    "dataset['review_body'].value_counts()"
+    "ds['review_body'].value_counts()"
    ]
   },
   {
@@ -176,7 +199,7 @@
    ],
    "source": [
     "# Counts of reviews with same headline\n",
-    "dataset['review_headline'].value_counts()"
+    "ds['review_headline'].value_counts()"
    ]
   },
   {
@@ -194,7 +217,7 @@
    ],
    "source": [
     "# Lots of spammy duplicate reviews...might be worth checking if the same person is duplicating the reviews across multiple products\n",
-    "x = dataset[dataset['review_body'].duplicated() == True]\n",
+    "x = ds[ds['review_body'].duplicated() == True]\n",
     "x.head()\n",
     "print(len(x.index))"
    ]
@@ -206,7 +229,7 @@
    "outputs": [],
    "source": [
     "#remove NaNs from the dataset  for now...\n",
-    "dataset = dataset.dropna()"
+    "ds = ds.dropna()"
    ]
   },
   {
@@ -215,7 +238,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "dataset[\"n_reviews\"] = dataset.groupby('product_id')['product_id'].transform('count')"
+    "ds[\"n_reviews\"] = ds.groupby('product_id')['product_id'].transform('count')"
    ]
   },
   {
@@ -269,7 +292,7 @@
     }
    ],
    "source": [
-    "dataset.head()"
+    "ds.head()"
    ]
   },
   {
@@ -365,7 +388,7 @@
     }
    ],
    "source": [
-    "dataset.head()"
+    "ds.head()"
    ]
   },
   {
@@ -406,7 +429,7 @@
     }
    ],
    "source": [
-    "negative_rows = dataset.loc[filter_bad_star]\n",
+    "negative_rows = ds.loc[filter_bad_star]\n",
     "negative_rows.head()\n",
     "len(negative_rows.index)"
    ]
@@ -428,7 +451,7 @@
     }
    ],
    "source": [
-    "positive_rows = dataset.loc[filter_good_star]\n",
+    "positive_rows = ds.loc[filter_good_star]\n",
     "positive_rows.head()\n",
     "len(positive_rows.index)"
    ]
@@ -504,7 +527,7 @@
     }
    ],
    "source": [
-    "positive_rows = dataset.loc[filter_good_star]\n",
+    "positive_rows = ds.loc[filter_good_star]\n",
     "positive_rows.head()\n",
     "len(positive_rows.index)"
    ]
@@ -956,8 +979,8 @@
  ],
  "metadata": {
   "kernelspec": {
-   "name": "python385jvsc74a57bd0fbff9bfab3ee0df4124016b4e010029cf2ec5864ce5e3c4aa09796cc364af95f",
-   "display_name": "Python 3.8.5 64-bit (conda)"
+   "name": "python394jvsc74a57bd052774b798c40528f530de7657fd1851e18ea3fd46ccdf10ced65da4d8da447ac",
+   "display_name": "Python 3.9.4 64-bit"
   },
   "language_info": {
    "codemirror_mode": {
@@ -969,7 +992,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5-final"
+   "version": "3.9.4"
+  },
+  "metadata": {
+   "interpreter": {
+    "hash": "52774b798c40528f530de7657fd1851e18ea3fd46ccdf10ced65da4d8da447ac"
+   }
   }
  },
  "nbformat": 4,
