--- a/Topic_Modelling.ipynb
+++ b/Topic_Modelling.ipynb
@@ -55,6 +55,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**TOPIC MODELLING**\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 4,
    "metadata": {},
@@ -90,6 +97,13 @@
    "source": [
     "#remove NaNs from the dataset  for now...\n",
     "dataset = dataset.dropna()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "First, we remove duplicates and reviews with missing values."
    ]
   },
   {
@@ -137,9 +151,9 @@
     "def preprocess(text):\n",
     "    result=[]\n",
     "    for token in gensim.utils.simple_preprocess(text) :\n",
-    "        if (token not in gensim.parsing.preprocessing.STOPWORDS): \n",
-    "            if (WordNetLemmatizer().lemmatize(token, 'v') != \"star\"): # Remove star to remove reviews such as: \"Five stars\"\n",
-    "                result.append(WordNetLemmatizer().lemmatize(token, 'v')) # for now, lemmatizing only verbs\n",
+    "        if (token not in gensim.parsing.preprocessing.STOPWORDS): # provide no information\n",
+    "            if (WordNetLemmatizer().lemmatize(token, 'v') != \"star\"): \n",
+    "                result.append(WordNetLemmatizer().lemmatize(token, 'v')) \n",
     "    return result"
    ]
   },
@@ -184,6 +198,13 @@
     "                                   random_state = 900,\n",
     "                                   ) \n",
     "    return lda_model, bow_corpus, dictionary"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "This is a visualisation for the body reviews. Similar topics are closer to each other. The plethora of words in the body almost never produces a bad class."
    ]
   },
   {
@@ -512,6 +533,13 @@
    ],
    "source": [
     "unseen_document(reviews_head[1005], lda_model_head)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Let's observe a concrete example that details why the head is more suited in obtaining more information. "
    ]
   },
   {
